<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.enology.eip.e_nology.cave.AddBottleActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.enology.fonts.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_cave_add_nom"/>

            <EditText
                android:id="@+id/cave_add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:singleLine="true"/>

            <com.enology.fonts.FontTextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cave_add_cru"/>

            <EditText
                android:id="@+id/cave_add_cru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:singleLine="true"/>

            <com.enology.fonts.FontTextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cave_add_grade"/>

            <EditText
                android:id="@+id/cave_add_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:numeric="integer"
                android:singleLine="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:orientation="vertical">

                    <com.enology.fonts.FontTextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cave_add_annee"/>

                    <EditText
                        android:id="@+id/cave_add_annee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:singleLine="true"
                        android:numeric="integer"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.enology.fonts.FontTextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cave_add_prix"/>

                    <EditText
                        android:id="@+id/cave_add_prix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numeric="decimal"
                        android:singleLine="true"/>

                </LinearLayout>

            </LinearLayout>

            <com.enology.fonts.FontTextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_cave_add_date_opti"/>

            <DatePicker
                android:id="@+id/cave_add_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar"
                android:layout_marginBottom="15dp"
                />

            <com.enology.fonts.FontTextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_cave_add_note"/>

            <EditText
                android:id="@+id/cave_add_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:layout_marginBottom="15dp"
                />

            <Button
                android:id="@+id/cave_add_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_cave_add_submit"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
