<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.enology.eip.e_nology.stats.StatsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/stats_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:visibility="invisible"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:text="@string/text_stats_nb_bottles" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/stats_nb_bottle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_blank_fragment" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:text="@string/text_stats_nb_bottles_open" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/stats_nb_bottles_open"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_blank_fragment" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:text="@string/text_stats_price_total_cave" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/stats_price_total_cave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_blank_fragment" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:text="@string/text_stats_average_bottle_price" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/stats_average_bottle_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_blank_fragment" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:text="@string/text_stats_favorite_wine" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/stats_favorite_wine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_blank_fragment" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:text="@string/text_stats_nb_bottles_rose" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/stats_nb_bottles_rose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_blank_fragment" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:text="@string/text_stats_nb_bottles_red" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/stats_nb_bottles_red"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_blank_fragment" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:text="@string/text_stats_nb_bottles_white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/stats_nb_bottles_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_blank_fragment" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:text="@string/text_stats_past_most_expensive_bottle" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/stats_past_most_expensive_bottle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_blank_fragment" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:text="@string/text_stats_past_oldest_bottle" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/stats_past_oldest_bottle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_blank_fragment" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:text="@string/text_stats_current_most_expensive_bottle" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/stats_current_most_expensive_bottle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_blank_fragment" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:text="@string/text_stats_current_oldest_bottle" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/stats_current_oldest_bottle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_blank_fragment" />


        </LinearLayout>
    </ScrollView>

    <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
        android:id="@+id/google_progress"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</RelativeLayout>
