<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    tools:context=".MyActivity">


    <!--  Arrow Right -->

    <ImageView
        android:id="@+id/arrow_right"
        android:background="@drawable/login_arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="25dp"
        android:maxHeight="25dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        android:layout_above="@+id/separator_arrow_right"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/view"
        android:layout_toRightOf="@+id/view" />

    <ImageView
        android:id="@+id/separator_arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/separator"
        android:layout_alignTop="@+id/text_button_signup"
        android:layout_alignRight="@+id/edittext_email_address"
        android:layout_alignEnd="@+id/edittext_email_address"
        android:visibility="invisible" />

    <com.enology.fonts.FontTextView
        android:id="@+id/text_button_signup"
        android:text="@string/text_login_fragment_passwordrecovery_text_arrow_right"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/separator"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignStart="@+id/logo" />

    <!--  Arrow Right END -->

    <com.enology.fonts.FontTextView
        android:text="@string/text_login_fragment_passwordrecovery_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:id="@+id/view"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/separator"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:id="@+id/separator" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/separator"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <com.enology.fonts.FontTextView
        android:id="@+id/passwordrecovery_hinttext"
        android:text="@string/text_login_fragment_passwordrecovery_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/separator"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.enology.fonts.FontEditText
        android:id="@+id/passwordrecovery_edittext_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/txt_input"
        android:hint="@string/text_edittext_email"
        android:textColor="#797b81"
        android:inputType="textEmailAddress"
        android:editable="true"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/passwordrecovery_hinttext"
        android:layout_centerHorizontal="true"
        android:paddingLeft="46dp"
        android:maxWidth="40dp" />

    <ImageView
        android:id="@+id/icon_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_email"
        android:layout_marginTop="11dp"
        android:layout_alignTop="@+id/passwordrecovery_edittext_email_address"
        android:layout_toLeftOf="@+id/logo"
        android:layout_toStartOf="@+id/logo"
        android:layout_marginRight="10dp" />


    <ImageButton
        android:id="@+id/passwordrecovery_button_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_signin"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/passwordrecovery_edittext_email_address"
        android:layout_alignLeft="@+id/passwordrecovery_edittext_email_address"/>

    <com.enology.fonts.FontTextView
        android:id="@+id/text_button_signin"
        android:text="@string/text_login_fragment_passwordrecovery_button_recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/passwordrecovery_button_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp" />

</RelativeLayout>