<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#323542"
    tools:context=".MyActivity">

    <com.enology.fonts.FontTextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/separator"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:id="@+id/separator" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/separator"
        android:layout_centerHorizontal="true" />

    <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
        android:id="@+id/google_progress"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/separator"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <com.enology.fonts.FontEditText
        android:id="@+id/edittext_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/txt_input"
        android:hint="@string/text_edittext_email"
        android:textColor="#797b81"
        android:inputType="textEmailAddress"
        android:editable="true"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:paddingLeft="46dp"
        android:maxWidth="40dp" />

    <ImageView
        android:id="@+id/icon_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_email"
        android:layout_marginTop="11dp"
        android:layout_alignTop="@+id/edittext_email_address"
        android:layout_toLeftOf="@+id/logo"
        android:layout_toStartOf="@+id/logo"
        android:layout_marginRight="10dp" />

    <com.enology.fonts.FontEditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/txt_input"
        android:hint="@string/text_edittext_password"
        android:textColor="#797b81"
        android:inputType="textPassword"
        android:editable="true"
        android:singleLine="true"
        android:layout_marginTop="9dp"
        android:layout_below="@+id/edittext_email_address"
        android:layout_alignLeft="@+id/edittext_email_address"
        android:layout_alignStart="@+id/edittext_email_address"
        android:paddingLeft="46dp"
        android:maxWidth="40dp" />

    <ImageView
        android:id="@+id/icon_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_password"
        android:layout_marginTop="5dp"
        android:baselineAlignBottom="false"
        android:layout_alignTop="@+id/edittext_password"
        android:layout_alignRight="@+id/icon_email"
        android:layout_alignEnd="@+id/icon_email" />

    <ImageButton
        android:id="@+id/button_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_signin"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/edittext_email_address"
        android:layout_alignStart="@+id/edittext_email_address"
        android:layout_marginBottom="33dp" />

    <com.enology.fonts.FontTextView
        android:id="@+id/text_button_signin"
        android:text="@string/text_button_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp" />

</RelativeLayout>
